css index principal

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,75 @@
 /* YeyeYeee código aquí */
+/*COLORES:
+#F6A800
+#3E3F41*/
+*{
+	font-family: 'Open Sans', sans-serif;
+}
+body{
+	background-color: #3E3F41;
+}
+
+/**FIRST-SECTION**/
+.first-section{
+	text-align: center;
+}
+.first-section img{
+	margin-top: 300px;
+}
+.first-section h1{
+	text-align: center;
+	color: #F6A800;
+	font-weight: 800;
+	font-size: 590%;
+	margin-bottom: 140px;
+}
+input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea{
+	display: block;
+	margin-bottom: 0px;
+	margin-left: 80px;
+	padding: 20px;
+	border: none;
+	width: 80%;
+	background-color: white;
+}
+::-webkit-input-placeholder { 
+	font-family: 'Open Sans', sans-serif;
+	font-size: 30px; 
+} /* WebKit */
+:-moz-placeholder { 
+	font-family: 'Open Sans', sans-serif;
+	font-size: 60px; 
+} /* Firefox 18- */
+::-moz-placeholder { 
+	font-family: 'Open Sans', sans-serif;
+	font-size: 60px; 
+} /* Firefox 19+ */
+:-ms-input-placeholder { 
+	font-family: 'Open Sans', sans-serif;
+	font-size: 60px; 
+} /* IE 10+ */
+.first-inputs button{
+	display: block;
+	margin-left: 80px;
+	margin-bottom: 35px;
+	padding-bottom: 20px;
+	padding-top: 20px;
+	width: 85%;
+	border: none;
+	background-color: #F6A800;
+	font-size: 20px;
+}
+.first-inputs a{
+	text-decoration: none;
+	font-size: 35px;
+	color: white;
+}
+.first-registrate p{
+	margin-top: 400px;
+	font-size: 25px;
+	color: white;
+}
+.first-registrate p a{
+	text-decoration: none;
+	color: #F6A800;
+}
